--- a/MyApplication03/app/src/main/res/values/strings.xml
+++ b/MyApplication03/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="d12">D12</string>
     <string name="d6">D6</string>
     <string name="d18">D18</string>
+    <string name="sorteio_com_dados">Sorteio com dados!</string>
 </resources>
