--- a/todo_example/app/src/main/res/values/strings.xml
+++ b/todo_example/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">todo_Example</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="em_andamento">Em andamento</string>
+    <string name="deletar_tarefa">Deletar Tarefa</string>
 </resources>
